# OpenDBX

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  opendbx.pc.in  opendbx.spec  opendbx.spec.in  opendbxplus.pc.in
backends/: Makefile.am  Makefile.in
backends/firebird/: Makefile.am  Makefile.in  firebird_basic.c  firebird_basic.h  firebird_lo.c  firebird_lo.h  firebirdbackend.c  firebirdbackend.h
backends/mssql/: Makefile.am  Makefile.in  mssql_basic.c  mssql_basic.h  mssqlbackend.c  mssqlbackend.h
backends/mysql/: Makefile.am  Makefile.in  mysql_basic.c  mysql_basic.h  mysqlbackend.c  mysqlbackend.h
backends/odbc/: Makefile.am  Makefile.in  odbc_basic.c  odbc_basic.h  odbcbackend.c  odbcbackend.h
backends/oracle/: Makefile.am  Makefile.in  oracle_basic.c  oracle_basic.h  oracle_lo.c  oracle_lo.h  oraclebackend.c  oraclebackend.h
backends/pgsql/: Makefile.am  Makefile.in  pgsql_basic.c  pgsql_basic.h  pgsqlbackend.c  pgsqlbackend.h
backends/sqlite/: Makefile.am  Makefile.in  sqlite_basic.c  sqlite_basic.h  sqlitebackend.c  sqlitebackend.h
backends/sqlite3/: Makefile.am  Makefile.in  sqlite3_basic.c  sqlite3_basic.h  sqlite3backend.c  sqlite3backend.h
backends/sybase/: Makefile.am  Makefile.in  sybase_basic.c  sybase_basic.h  sybasebackend.c  sybasebackend.h
debian/: changelog  control  copyright  rules  watch
doc/: Doxyfile.in  Makefile.am  Makefile.in  opendbx.en.xml
lib/: Makefile.am  Makefile.in  odbx.c  odbx.cpp  odbx.h  odbx_iface.hpp  odbx_impl.cpp  odbx_impl.hpp  odbxdrv.h  odbxlib.c  odbxlib.h
lib/opendbx/: api  api.h
po/: ChangeLog  Makevars  POTFILES.in  de.gmo  de.po  en@quot.gmo  en@quot.po  opendbx.pot
test/: Makefile.am  Makefile.in  odbx-regression.c  odbx-regression.h  odbxplus-regression.cpp  odbxtest.sh  odbxtest.site.template
test/ref/: firebird.ref  mssql.ref  mysql.ref  odbc.ref  oracle.ref  pgsql.ref  sqlite.ref  sqlite3.ref  sybase.ref
utils/: Makefile.am  Makefile.in  argmap.cpp  argmap.hpp  commands.cpp  commands.hpp  completion.cpp  completion.hpp  keywords  odbx-sql.cpp  odbx-sql.hpp
utils/doc/: Makefile.am  Makefile.in  opendbx-utils.en.xml
utils/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  en@quot.gmo  en@quot.po  opendbx-utils.pot
