ACLOCAL_AMFLAGS = -I m4

SUBDIRS = backends doc lib po test utils

EXTRA_DIST = config.rpath \
	debian/changelog \
	debian/compat \
	debian/control \
	debian/copyright \
	debian/docs \
	debian/rules \
	debian/watch \
	opendbx.pc.in \
	opendbxplus.pc.in \
	opendbx.spec.in \
	opendbx.spec \
	ABOUT-NLS

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = opendbx.pc opendbxplus.pc
